<resources>
    <string name="app_name">SynapseChat</string>
    <string name="drawer_open">Открыть меню</string>
    <string name="drawer_close">Закрыть меню</string>
    <string name="s_username">Имя пользователя</string>
    <string name="b_login">Войти</string>
    <string name="check_save">Сохранить вход</string>
    <string name="s_password">Пароль</string>
    <string name="s_ipport">IP:Port</string>
    <string name="no_acc">Нет аккаунта? Запросите данные у владельца сервера</string>
    <string name="s_settings">Настройки</string>
    <string name="s_downloading">Скачивание</string>
    <string name="s_choose">Выберите модель для работы</string>
    <string name="s_setup">Установка модели на сервер:</string>
    <string name="s_setting">Установка:</string>
    <string name="b_set">Установить</string>
    <string name="b_leave">Выход</string>
    <string name="s_menu">Меню</string>
    <string name="s_history">История</string>
    <string name="s_chat">Чат</string>
    <string name="s_send">Отправить</string>
    <string name="s_entermessage">Чат</string>
    <string name="s_thinking">Бот думает...</string>
</resources>