<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_choose"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/s_setup"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinnerAvailableModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/installinfo"
        android:text="@string/s_setting"/>
    <Spinner
        android:id="@+id/spinnerAvailableVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/installbutton"
        android:text="@string/b_set"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:background="#FF0000"
        android:layout_height="wrap_content"
        android:text="@string/b_leave"
        android:textColor="@color/white"/>


</LinearLayout>
